[presentation] correct typo : distribued -> distributed

--- a/presentation/spark_hands_on.tex
+++ b/presentation/spark_hands_on.tex
@@ -217,7 +217,7 @@ sbt "run-main psug.hands.on.prerequisite.WordCount README.md"
     \begin{itemize}
       \item \textbf{Spark Conf} Configuration of the Spark Context, here contains application name and master to call
       \item \textbf{Spark Context} Main entry point, represents the connection to a Spark Cluster, used to create RDDs/Load file
-      \item \textbf{Resilient Distribued Dataset (RDD)} Main Dataset abstraction on which we can apply actions and transformations
+      \item \textbf{Resilient Distributed Dataset (RDD)} Main Dataset abstraction on which we can apply actions and transformations
       \item \textbf{Transformations} functions that transform RDD to another RDD
       \item \textbf{Actions} functions that transform a RDD to output data
     \end{itemize}
